--- a/lektor/assets/static/style.css
+++ b/lektor/assets/static/style.css
@@ -11,21 +11,25 @@ a:hover {
     color: #33bbdf;
 }
 
-header, footer, div.page {
+nav ul li:active {
+    color: #000000;
+}
+
+main {
     width: 760px;
     margin: 0 auto;
     background: #daeef3;
     padding: 20px 30px;
 }
 
-header h1 {
+main h1 {
     color: #169bbd;
     margin: 0;
     font-weight: normal;
     font-size: 42px;
 }
 
-header nav ul {
+main nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
