--- a/lektor/templates/certification.html
+++ b/lektor/templates/certification.html
@@ -3,7 +3,7 @@
 {% from "macros/person.html" import render_person_iterable, render_person_name, render_person_title %}
 {% from "macros/time.html" import date_long_tostr %}
 {% set year = this.date_start.year %}
-{% set title = 'Redderscursus - Hoger Redder - {}'.format(year) %}
+{% set title = 'Cursus HR - {} {}'.format(this.title_prefix, year) %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
 <h1>{{ title }}</h1>
