--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="{{ '/static/img/icon.ico' | asseturl }}">
     <title>{% block title %}Welcome{% endblock %} &mdash; {{ bag('site.title_short') }}</title>
 
-    <!--<link rel="stylesheet" href="{{ '/static/style.css' | asseturl }}">-->
     <link rel="stylesheet" href="{{ '/static/thirdparty/css/bootstrap.min.css' | asseturl }}">
   </head>
 <body>
@@ -45,7 +44,7 @@
           <li class="breadcrumb-item active">{{ parents[-1].title }}</li>
         </ol>
       </nav>
-      &copy;{{ bag('site.year_lastchange') }} door {{ bag('site.developer_name') }}.
+      &copy;{{ bag('site.year_lastchange') }} door <a href="mailto:{{ bag('person.admin_site.email') }}">{{ bag('person.admin_site.title') }}</a>
     </footer>
   </div>
   <script src="{{ '/static/thirdparty/js/jquery-3.2.1.min.js' | asseturl }}"></script>
