--- a/lektor/templates/recertification.html
+++ b/lektor/templates/recertification.html
@@ -11,7 +11,8 @@
 <u>Datum:</u> {{ date_long_tostr(this.datetime_start) }}<br>
 <u>Tijd:</u> {{ time_tostr(this.datetime_start) }} - {{ time_tostr(this.datetime_stop) }}<br>
 <u>Plaats:</u> {{ render_location_name(this.location) }}, {{ render_location_address(this.location, separator=', ') }}<br>
-<u>Prijs:</u> &euro;{{ this.price }},-<br>
+<u>Prijs:</u> {{ bag('person.education.email') | urlize() }}<br>
+<u>Contact:</u> &euro;{{ this.price }},-<br>
 <u>Docenten:</u> {{ render_person_iterable(this.teachers, separator=', ') }}<br>
 Plaatsen beperkt tot {{ this.capacity }} deelnemers.<br>
 Info en inschrijvingen: {{ render_person_title(this.contact, link=True) }}
