Added Font Awesome

--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -9,6 +9,7 @@
     <title>{% block title %}Welcome{% endblock %} &mdash; {{ bag('site.title_short') }}</title>
 
     <link rel="stylesheet" href="{{ '/static/thirdparty/css/bootstrap.min.css' | asseturl }}">
+    <link rel="stylesheet" href="{{ '/static/thirdparty/css/font-awesome.min.css' | asseturl }}">
   </head>
 <body>
   <header>
