--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -10,11 +10,13 @@
 
     <link rel="stylesheet" href="{{ '/static/thirdparty/css/bootstrap.min.css' | asseturl }}">
     <link rel="stylesheet" href="{{ '/static/thirdparty/css/font-awesome.min.css' | asseturl }}">
+    <link rel="stylesheet" href="{{ '/static/css/rescueteam.css' | asseturl }}">
   </head>
 <body>
   <header>
     <nav class="navbar sticky-top navbar-light bg-light navbar-expand-sm">
-      <a class="navbar-brand text-hide" style="background-image: url('{{ '/static/img/icon.png' | asseturl }}'); background-size: 50px 50px; width: 50px; height: 50px;" href="{{ site.root | url }}">{{ bag('site.title_short') }}</a>
+      <a class="navbar-brand text-hide" style="background-image: url('{{ '/static/img/icon.png' | asseturl }}'); background-size: 50px 50px; width: 50px; height: 50px;"
+         href="{{ site.root | url }}"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,8 +32,7 @@
     </nav>
   </header>
   <div class="container">
-    <!--<h1>{{ bag('site.title_long') }}</h1>-->
-        {% block body %}{% endblock %}
+{% block body %}{% endblock %}
     <footer>
       <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb">{%
@@ -45,7 +46,7 @@
           <li class="breadcrumb-item active">{{ parents[-1].title }}</li>
         </ol>
       </nav>
-      &copy;{{ bag('site.year_lastchange') }} door <a href="mailto:{{ bag('person.admin_site.email') }}">{{ bag('person.admin_site.title') }}</a>
+      <i class="fa fa-copyright"></i> {{ bag('site.year_lastchange') }} door <a href="mailto:{{ bag('person.admin_site.email') }}">{{ bag('person.admin_site.title') }}</a>
     </footer>
   </div>
   <script src="{{ '/static/thirdparty/js/jquery-3.2.1.min.js' | asseturl }}"></script>
