--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -8,9 +8,8 @@
     <link rel="icon" href="{{ '/static/img/icon.ico' | asseturl }}">
     <title>{% block title %}Welcome{% endblock %} &mdash; {{ bag('site.title_short') }}</title>
 
-    <link rel="stylesheet" href="{{ '/static/thirdparty/css/bootstrap.min.css' | asseturl }}">
+    <link rel="stylesheet" href="{{ '/static/gen/styles.css' | asseturl }}">
     <link rel="stylesheet" href="{{ '/static/thirdparty/css/font-awesome.min.css' | asseturl }}">
-    <link rel="stylesheet" href="{{ '/static/css/rescueteam.css' | asseturl }}">
   </head>
 <body>
   <header>
@@ -37,7 +36,7 @@
       <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb">{%
           set root = site.get('/') %}{%
-          set parents = get_parents(this) %}{{ parents }}{%
+          set parents = get_parents(this) %}{%
           if parents is iterable %}{%
             for parent in parents[:-1] %}
               <li class="breadcrumb-item">
@@ -51,7 +50,7 @@
       <i class="fa fa-copyright"></i> {{ bag('site.year_lastchange') }} door <a href="mailto:{{ bag('person.admin_site.email') }}">{{ bag('person.admin_site.title') }}</a>
     </footer>
   </div>
-  <script src="{{ '/static/thirdparty/js/jquery-3.2.1.min.js' | asseturl }}"></script>
-  <script src="{{ '/static/thirdparty/js/bootstrap.bundle.min.js' | asseturl }}"></script>
+  <script src="{{ '/static/gen/app.js' | asseturl }}"></script>
+  <script src="{{ '/static/gen/styles.js' | asseturl }}"></script>
 </body>
 </html>
