--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -15,8 +15,8 @@
 <body>
   <header>
     <nav class="navbar sticky-top navbar-light bg-light navbar-expand-sm">
-      <a class="navbar-brand text-hide navbar-logo" href="{{ site.root | url }}">
-        <img src="{{ '/static/img/icon.png' | asseturl }}"/>
+      <a class="navbar-brand text-hide" href="{{ site.root | url }}">
+        <img class="navbar-logo" src="{{ '/static/img/icon.png' | asseturl }}"/>
       </a><!--<div class="hidden-sm-up visible">RTN</div>-->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,28 +32,47 @@
       </div>
     </nav>
   </header>
-<div class="container" id="main_container">
-{% block body %}{% endblock %}
-</div>
-  <div class="footer">
-    <footer>
-      <nav aria-label="breadcrumb" role="navigation">
-        <ol class="breadcrumb">{%
-          set root = site.get('/') %}{%
-          set parents = get_parents(this) %}{%
-          if parents is iterable %}{%
-            for parent in parents[:-1] %}
-              <li class="breadcrumb-item">
-                <a href="{{ parent | url }}">{{ parent.title }}</a></li>
-              </li>{%
-            endfor %}
-          <li class="breadcrumb-item active">{{ parents[-1].title }}</li>{%
-          endif %}
-          </ol>
-      </nav>
-      <i class="fa fa-copyright"></i> {{ bag('site.year_lastchange') }} door <a href="mailto:{{ bag('person.admin_site.email') }}">{{ bag('person.admin_site.title') }}</a>
-    </footer>
+  <div class="container" id="main_container">
+  {% block body %}{% endblock %}
   </div>
+  <footer>
+    <!--
+    <div id="footer_nav">
+      <div class="container text-center">Je bevindt je hier:
+        <nav aria-label="breadcrumb" role="navigation">
+          <ol class="breadcrumb">{%
+            set root = site.get('/') %}{%
+            set parents = get_parents(this) %}{%
+            if parents is iterable %}{%
+              for parent in parents[:-1] %}
+                <li class="breadcrumb-item">
+                  <a href="{{ parent | url }}">{{ parent.title }}</a></li>
+                </li>{%
+              endfor %}
+            <li class="breadcrumb-item active">{{ parents[-1].title }}</li>{%
+            endif %}
+            </ol>
+        </nav>
+      </div>
+    </div>
+    -->
+    <div class="footer_contact bg-light" id="footer_contact">
+      <div class="container text-center">
+          Contacteer ons:
+    {% set contact_options = (('mailto:{}'.format(bag('person.admin_site.email')), 'fa-envelope-o'), (bag('site.facebook'), 'fa-facebook'), ) %}
+          <ul class="list-inline contact-options ">
+    {% for href, fa in contact_options %}
+            <li class="list-inline-item">
+              <a class="btn btn-outline-dark btn-contact text-center rounded-circle" href="{{ href }}">
+                <i class="fa {{ fa }} fa-fw" style="vertical-align:middle;"></i>
+              </a>
+            </li>
+    {% endfor%}
+          </ul>
+          <div class="copyright"><i class="fa fa-copyright"></i> {{ bag('site.year_lastchange') }} <a href="mailto:{{ bag('person.admin_site.email') }}">{{ bag('person.admin_site.title') }}</a></div>
+      </div>
+    </div>
+  </footer>
   <script src="{{ '/static/gen/app.js' | asseturl }}"></script>
   <script src="{{ '/static/gen/styles.js' | asseturl }}"></script>
 </body>
