--- a/lektor/templates/home_page.html
+++ b/lektor/templates/home_page.html
@@ -2,8 +2,8 @@
 {% from "macros/certification.html" import render_certification_title, render_recertification_title %}
 {% from "macros/time.html" import date_long_tostr %}
 {% block title %}{{ this.title }}{% endblock %}
-{% set most_recent_certification = site.get('/opleiding/cursus').children.first() %}
-{% set most_recent_recertification = site.get('/opleiding/bijscholing').children.first() %}
+{% set most_recent_certification = site.get('/opleiding/cursus').children.filter(F.published).first() %}
+{% set most_recent_recertification = site.get('/opleiding/bijscholing').children.filter(F.published).first() %}
 {% block body %}
 <h1>{{ this.title }}</h1>
 {{ this.body.__html__() | replace('MOST_RECENT_CERTIFICATION', render_certification_title(most_recent_certification, link=True))
