--- a/lektor/templates/macros/certification.html
+++ b/lektor/templates/macros/certification.html
@@ -1,6 +1,6 @@
 {% from "macros/time.html" import date_long_tostr %}
 
-{% macro render_somecert_title(event, cert_event_title, link=False) -%}{%
+{% macro render_somecert_title(event, cert_event_title, open=None, link=False) -%}{%
     if link
         %}<a href="{{ event | url }}">{%
     endif %}{{
@@ -10,10 +10,10 @@
     endif %}{%
 endmacro %}
 
-{% macro render_certification_title(cert_event, link=False) -%}{{
-    render_somecert_title(cert_event, '{} {}'.format(cert_event.title_prefix, cert_event.date_start.year), link=link) }}{%
+{% macro render_certification_title(cert_event, open=None, link=False) -%}{{
+    render_somecert_title(cert_event, '{} {}'.format(cert_event.title_prefix, cert_event.date_start.year), open=open, link=link) }}{%
 endmacro %}
 
-{% macro render_recertification_title(recert_event, link=False) -%}{{
-    render_somecert_title(recert_event, date_long_tostr(recert_event.datetime_start), link=link) }}{%
+{% macro render_recertification_title(recert_event, open=None, link=False) -%}{{
+    render_somecert_title(recert_event, date_long_tostr(recert_event.datetime_start), open=open, link=link) }}{%
 endmacro %}
