--- a/lektor/templates/recertification.html
+++ b/lektor/templates/recertification.html
@@ -13,9 +13,9 @@
 <u>Plaats:</u> {{ render_location_name(this.location) }}, {{ render_location_address(this.location, separator=', ') }}<br>
 <u>Prijs:</u> &euro;{{ this.price }},-<br>
 <u>Contact:</u> {{ bag('person.education.email') | urlize }}<br>
-<u>Docenten:</u> {{ render_person_iterable(this.teachers, separator=', ') }}
+<u>Docenten:</u> {{ render_person_iterable(this.teachers, separator=', ') }}<br>
 Plaatsen beperkt tot {{ this.capacity }} deelnemers.{%
-if not this.registration_open %}<br>
+if not this.registration_open %}
     Deze opleiding is volzet.{%
 endif %}
 </p>
