--- a/lektor/templates/recertification.html
+++ b/lektor/templates/recertification.html
@@ -8,12 +8,12 @@
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
 <p>
-<u>Datum:</u> {{ date_long_tostr(this.datetime_start) }}<br>
-<u>Tijd:</u> {{ time_tostr(this.datetime_start) }} - {{ time_tostr(this.datetime_stop) }}<br>
-<u>Plaats:</u> {{ render_location_name(this.location) }}, {{ render_location_address(this.location, separator=', ') }}<br>
-<u>Prijs:</u> &euro;{{ this.price }},-<br>
-<u>Contact:</u> {{ bag('person.education.email') | urlize }}<br>
-<u>Docenten:</u> {{ render_person_iterable(this.teachers, separator=', ') }}<br>
+<u>Datum:</u> {{ date_long_tostr(this.datetime_start) }}<br />
+<u>Tijd:</u> {{ time_tostr(this.datetime_start) }} - {{ time_tostr(this.datetime_stop) }}<br />
+<u>Plaats:</u> {{ render_location_name(this.location) }}, {{ render_location_address(this.location, separator=', ') }}<br />
+<u>Prijs:</u> &euro;{{ this.price }},-<br />
+<u>Contact:</u> {{ bag('person.education.email') | urlize }}<br />
+<u>Docenten:</u> {{ render_person_iterable(this.teachers, separator=', ') }}<br />
 Plaatsen beperkt tot {{ this.capacity }} deelnemers.{%
 if not this.registration_open %}
     Deze opleiding is volzet.{%
