Use webpack correctly for tracking dependencies

--- a/lektor/webpack/scss/_theme.scss
+++ b/lektor/webpack/scss/_theme.scss
@@ -5,12 +5,10 @@ $active:        #9fa9a3;
 $dark:          #888;
 
 $third: $active;
-/*
-HEX: #f0f0f0
+//HEX: #f0f0f0
 
-HEX: #c5d5c5
+//HEX: #c5d5c5
 
-HEX: #9fa9a3
+//HEX: #9fa9a3
 
-HEX: #e3e0cc
-*/
+//HEX: #e3e0cc
