--- a/lektor/assets/static/css/rescueteam.css
+++ b/lektor/assets/static/css/rescueteam.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 html {
     height: 100%;
 }
@@ -12,7 +14,6 @@ html {
     background-color: white;
     border-radius: 20%;
 }
-
 
 body {
    position: relative;
