--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -12,7 +12,6 @@
     <title>{% block title %}Welcome{% endblock %} &mdash; {{ bag('site.title_short') }}</title>
     <link rel="stylesheet" href="{{ '/static/gen/styles.css' | asseturl }}" />
     <link rel="stylesheet" href="{{ '/static/css/rescueteam.css' | asseturl }}" />
-    <link rel="stylesheet" href="{{ '/static/thirdparty/css/font-awesome.min.css' | asseturl }}" />
   </head>
 <body>
   <header>
@@ -79,7 +78,7 @@
       </div>
     </div>
   </footer>
-  <script src="{{ '/static/gen/app.js' | asseturl }}"></script>
-  <script src="{{ '/static/gen/styles.js' | asseturl }}"></script>
+  <script src="{{ '/static/gen/app.bundle.js' | asseturl }}"></script>
+  <script src="{{ '/static/gen/styles.bundle.js' | asseturl }}"></script>
 </body>
 </html>
